--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+.terraform
+.terraform.lock.hcl
+
+plan.out
+
+db_host.txt
+
+lambda/package/*
+
+update_data.zip
