--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.9.0
+click==8.2.1
 fastapi==0.116.1
 greenlet==3.2.3
+h11==0.16.0
 idna==3.10
 mysql-connector-python==9.3.0
 psycopg==3.2.9
@@ -15,3 +17,4 @@ starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
+uvicorn==0.35.0
