FIX: Docker configs

--- a/.github/workflows/ecr_publish.yaml
+++ b/.github/workflows/ecr_publish.yaml
@@ -74,6 +74,13 @@ jobs:
         env:
           REGISTRY: ${{ needs.ecr-push.outputs.registry }}
           REPOSITORY: fake-ecommerce-api
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_DNS }} "docker pull $REGISTRY/$REPOSITORY:latest && docker stop fake-ecommerce-api || true && docker rm fake-ecommerce-api || true && docker run -d --name fake-ecommerce-api -p 8000:8000 -e DB_USER=${{ secrets.DB_USER }} -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} $REGISTRY/$REPOSITORY:latest"
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_DNS }} "
+            docker pull $REGISTRY/$REPOSITORY:latest &&
+            docker stop fake-ecommerce-api || true &&
+            docker rm fake-ecommerce-api || true &&
+            docker run -d --name fake-ecommerce-api -p 8000:8000 \
+              -e DB_USER=${{ secrets.DB_USER }} \
+              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              $REGISTRY/$REPOSITORY:latest
+          "
