FIX: Added verifies steps on docker update

--- a/.github/workflows/ecr_publish.yaml
+++ b/.github/workflows/ecr_publish.yaml
@@ -67,6 +67,12 @@ jobs:
       - name: Valida ssh no remoto na EC2 Ubuntu
         run: |
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_DNS }} "echo 'SSH validado realizado com sucesso!'"
+      
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          mask-password: 'true'
 
       - name: Docker update container
         env:
