--- a/.github/workflows/ecr_publish.yaml
+++ b/.github/workflows/ecr_publish.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    # paths:
-    # - "api/**"
+    paths:
+    - "api/**"
   pull_request:
     branches:
       - main
